--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,7 +3,7 @@
 # Section for system updates
 ##############################
 # Wether or not call update-system task
-system_update: true
+system_update: false
 # Whether or not only applies security updates
 system_update_security_only: false
 
