Change default var

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -37,8 +37,8 @@ system_packages_remove:
 # ----------------------
 # Specific Debian/Ubuntu
 # ----------------------
-system_deb_urls:
-  - "https://prerelease.keybase.io/keybase_amd64.deb"
+# system_deb_urls:
+#  - "https://prerelease.keybase.io/keybase_amd64.deb"
 
 # --------------------
 # Specific Centos/RHEL
