--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
   author: Patrick Tavares
   description: Ansible role for managing system (update - install/remove packages - clean)
-  company: Personal
+  company: ptavares
   license: MIT
   min_ansible_version: 2.5
   platforms:
