--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,8 @@ script:
   # Basic role syntax check
   - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
   # Run the role/playbook with ansible-playbook.
-  - "ansible-playbook -i tests/inventory tests/test.yml --connection=local -vvvv"
+  - "ansible-playbook -i tests/inventory tests/test.yml \
+    --connection=local -vvvv"
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
